The newest version. Date : 2020-02-24

--- a/uione/accton/pod_manager/sonic/templates/sonic/supported-devices.html
+++ b/uione/accton/pod_manager/sonic/templates/sonic/supported-devices.html
@@ -18,7 +18,7 @@
 	<!-- ====     page content     ==== -->
 	<!-- ====     page content     ==== -->
 	<!-- ====     page content     ==== -->
-	<div class="row">
+	<div class="row" style="margin:0px;">
 		<div class="col-12 col-sm-12 system_T1_Table">
 			<div class="x_panel title">
 				<h1>Supported Products</h1>
