--- a/uione/accton/templates/main_page.html
+++ b/uione/accton/templates/main_page.html
@@ -278,7 +278,7 @@
 	</div>
 	<div class="clearfix"></div>
 	<div class="container common-font main-footer">
-		<div class="row" style="padding-left:120px;">
+		<div class="footer" style="padding-left:120px;">
 			<div class="col-xs-12 col-sm-6">
 				<div class="col-xs-6">
 					<h2 class="footer-title">About Us</h2>
@@ -390,12 +390,12 @@
 					</ul>
 				</div>
 			</div>
-			
-		</div><!-- /footer content -->
-		<div class="footer common-font1">
-			Powered by Accton Technology &copy;
+			<div class="footer-bottom common-font1">
+				Powered by Accton Technology &copy;
+			</div>
 		</div>
 		</div>
+	</div>
 
 
 {% include 'preset_js.html' %}
