--- a/uione/accton/templates/template_ntc.html
+++ b/uione/accton/templates/template_ntc.html
@@ -96,7 +96,8 @@
 			</li>
 			<li>
 				<a href="/sonic/roadmap">Roadmap</a>
-			</li>
+            </li>
+            
 			<li>
 				<a href="/sonic/support">Support</a>
 			</li>
@@ -118,11 +119,24 @@
 				<a href="/test/status">Job status</a>
             </li>
             <li>
+				<a href="/sonic/devicefeture">Device Feture</a>
+			</li>
+			<li>
+				<a href="/sonic/compatiblesoftWare">Compatible SoftWare</a>
+			</li>
+			<li>
+				<a href="/sonic/firmware">Firmware</a>
+			</li>
+            <li>
+				<a href="/test/testCaseManagement">Test Case Management</a>
+            </li>
+            <li>
 				<a href="/test/testPlanManagement">Test plan management</a>
 			</li>
             <li>
                 <a href="/test/jenkinsViews">Jenkins Builds</a>
             </li>
+            
             <li>
                 <a href="/test/labInformation">Lab Information</a>
             </li>
