--- a/uione/accton/templates/template_sonic.html
+++ b/uione/accton/templates/template_sonic.html
@@ -104,6 +104,17 @@
 			<li>
 				<a href="/sonic/support">Support</a>
 			</li>
+	<!--
+			<li>
+				<a href="/sonic/devicefeture">Device Feture</a>
+			</li>
+			<li>
+				<a href="/sonic/compatiblesoftWare">Compatible SoftWare</a>
+			</li>
+			<li>
+				<a href="/sonic/firmware">Firmware</a>
+			</li>
+		-->
 			<li>
 				<a href="/sonic/accton/download">Downloads</a>
 			</li>
